teams/blue/dev/demo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-deployment
  namespace: team-blue-dev
  labels:
    app: go-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-web
  template:
    metadata:
      labels:
        app: go-web
    spec:
      containers:
      - name: go-web-container
        image: lkravi/eks_bp_demo:d8c465c6
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: go-web-service
  namespace: team-blue-dev
spec:
  selector:
    app: go-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
